# intel.cloudfreed.framecomposer.hpciframecomposer

./: .gitmodules  CMakeLists.txt  README.md
Intel.CloudFreed.FrameComposer.Example/: CMakeLists.txt  Intel.CloudFreed.FrameComposer.Example.vcxproj  main.cpp  ~AutoRecover.Intel.CloudFreed.FrameComposer.Example.vcxproj
Intel.CloudFreed.FrameComposer.HpciFrameComposer/: Intel.CloudFreed.FrameComposer.HpciFrameComposer.vcxproj  ~AutoRecover.Intel.CloudFreed.FrameComposer.HpciFrameComposer.vcxproj
Intel.CloudFreed.FrameComposer.HpciFrameComposer/include/: HpciFrameComposer.h
Intel.CloudFreed.FrameComposer.HpciFrameComposer/src/: External.h  HpciFrameComposer.cpp  types.h
src/: Protocol.h
